--- a/Frontend/carttech/src/styles/home.css
+++ b/Frontend/carttech/src/styles/home.css
@@ -1,7 +1,6 @@
 .cursor {
   overflow: hidden;
   border-right: 0.15em solid black;
-  white-space: nowrap;
   letter-spacing: 0.15em;
   position: absolute;
   top: 50%;
@@ -9,6 +8,11 @@
   transform: translate(-50%, -50%);
   animation-delay: 10000ms;
   animation: typing 3 steps(60, end), blink 1s step-end infinite;
+  word-wrap: normal;
+}
+
+.image {
+  height: 87.5vh;
 }
 
 @keyframes typing {
