--- a/Frontend/src/styles/home.css
+++ b/Frontend/src/styles/home.css
@@ -42,13 +42,13 @@
 }
 
 #backgroundimg {
-  background-image: url("../carttech-teamphoto.png");
+  background-image: url("../carttech-teamphoto-dark.png");
   width: 100%;
   height: 100vh;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
-  opacity: 50%;
+  /*opacity: 50%;*/
   background-size: cover;
   background-position: center;
 }
